--- a/src/assets/scss/components/_advantages.scss
+++ b/src/assets/scss/components/_advantages.scss
@@ -1,8 +1,8 @@
 .advantages {
   background-color: $darkgrey;
   color: #ffffff;
-  outline: 3px solid green;
-  outline-offset: -3px;
+//   outline: 3px solid green;
+//   outline-offset: -3px;
 }
 
 .advantages__wrapper {
@@ -20,8 +20,8 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  outline: 4px solid red;
-  outline-offset: -4px;
+//   outline: 4px solid red;
+//   outline-offset: -4px;
   @media screen and (min-width: $desktop-width){
       display: flex;
       flex-direction: row;
@@ -29,8 +29,8 @@
 }
 
 .advantages__item {
-  outline: 5px solid blue;
-  outline-offset: -5px;
+//   outline: 5px solid blue;
+//   outline-offset: -5px;
 }
 
 .slider__toggles {
