--- a/src/assets/scss/components/_advantages.scss
+++ b/src/assets/scss/components/_advantages.scss
@@ -33,7 +33,7 @@
 //   outline-offset: -5px;
 }
 
-.slider__toggles {
+.advantages__toggles {
   @media screen and (min-width: $tablet-width) {
     display: none;
   }
