--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -7,26 +7,149 @@
 
 .page-header__logo {
   height: 85px;
-  background: $darkgrey;
-//   outline: 5px solid green;
-//   outline-offset: -5px;
+  text-align: center;
+  // background: $darkgrey;
+  outline: 2px solid green;
+  outline-offset: -2px;
   @media (min-width: $tablet-width) {
     order: 2;
     height: 400px;
+    background-color: #000000;
+    background-image: url("/src/assets/img/header-bg.png");
+    background-repeat: no-repeat;
+    background-position: 50% -9px;
+    background-size: cover;
   }
   @media (min-width: $desktop-width) {
     height: 648px;
+    margin-top: 57px;
+    background-position: 50% 0;
   }
 }
 
+.page-header__logo img {
+  // width: 226px;
+  // height: 85px;
+}
+
 .main-nav {
-//   outline: 2px solid red;
-//   outline-offset: -2px;
+  position: relative;
+  width: auto;
+  min-height: 51px;
+  background-color: #826550;
+
+  outline: 2px solid red;
+  outline-offset: -2px;
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  width: 70px;
+  height: 50px;
+  background-color: #6A4D38;
+  cursor: pointer;
+  border: none;
+
+  &:hover,
+  &:active {
+    background-color: #624530;
+  }
+  
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: '';
+  position: absolute;
+  top: 15px;
+  left: 17px;
+  width: 36px;
+  height: 2px;
+  background-color: #ffffff;
+  box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff
+}
+
+.main-nav--closed .main-nav__toggle:active::before {
+  background-color: rgba(#ffffff, .3);
+  box-shadow: 0 8px 0 0 rgba(#ffffff, .3), 0 16px 0 0 rgba(#ffffff, .3)
+}
+
+.main-nav--opened .main-nav__toggle {
+  position: absolute;
+  top: 0;
+  right: auto;
+  left: 0;
+
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    height: 2px;
+    width: 36px;
+    top: 24px;
+    left: 17px;
+    background-color: #ffffff;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+  }
+  &::after {
+    transform: rotate(-45deg);
+  }
+
+  &:active::after,
+  &:active::before {
+    background-color: rgba(#ffffff, .3);
+  }
+
+}
+
+@media (max-width: $mobile-width) {
+  .main-nav--closed .site-list__item {
+    display: none;
+    &--active {
+      display: block;
+    }
+  }
+  .main-nav--closed .user-list__item--active a {
+    padding-right: 70px;
+    padding-left: 70px;
+    text-align: center;
+  }
+  .main-nav--closed .user-list__item {
+    display: none;
+  }
+
+  .main-nav--opened .main-nav__wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 70px;
+    z-index: 10;
+    min-height: 80vh;
+    background-color: #6A4D38;
+  }
+
+  .main-nav--opened .main-nav__wrapper::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 12;
+    width: 7px;
+    height: 100%;
+    box-shadow: inset 4px 0px 7px -2px rgba(#000000, .4);
+  }
+  
 }
 
 .site-list {
-//   outline: 5px solid blue;
-//   outline-offset: -5px;
+  font-weight: bold;
+  //   outline: 5px solid blue;
+  //   outline-offset: -5px;
   @media (min-width: $tablet-width) {
     width: 570px;
   }
@@ -35,12 +158,36 @@
   }
 }
 
+.site-list a {
+  position: relative;
+  display: block;
+  padding: 12px 21px 13px 21px; 
+  font-size: 18px;
+  line-height: 24px;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: #826550;
+  border-top: 1px solid #886E5B;
+  border-bottom: 1px solid #71543F;
+}
+
 .user-list {
-//   outline: 5px solid blue;
-//   outline-offset: -5px;
+  //   outline: 5px solid blue;
+  //   outline-offset: -5px;
   @media (min-width: $tablet-width) {
     width: 60px;
   }
+}
+
+.user-list__login {
+  position: relative;
+  display: block;
+  padding: 17px 21px;
+  padding-left: 49px;
+  line-height: 18px;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .main-nav__list {
@@ -60,7 +207,7 @@
     margin: 0 auto;
   }
   .main-nav__toggle {
-      display: none;
+    display: none;
   }
 }
 
