--- a/src/assets/scss/components/_stats.scss
+++ b/src/assets/scss/components/_stats.scss
@@ -1,49 +1,103 @@
 .stats {
-    background-color: $darkgrey;
-    color: #ffffff;
-    // outline: 3px solid green;
-    // outline-offset: -3px;
+  background-color: $darkgrey;
+  color: #ffffff;
+  // outline: 3px solid green;
+  // outline-offset: -3px;
 }
 
 .stats__wrapper {
-    @media screen and  (min-width: $tablet-width) {
-        padding: 0 64px;
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-    }
-    @media screen and  (min-width: $desktop-width) {
-        padding: 0 64px;
-        margin: auto;
-        max-width: 960px;
-    }
+  @media screen and (min-width: $tablet-width) {
+    padding: 0 64px;
+  }
+  @media screen and (min-width: $desktop-width) {
+    padding: 0 64px;
+    margin: auto;
+    max-width: 960px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
 }
 
 .stats__header {
-    background-color: #ffffff;
-    color: #000000;
-    // outline: 5px solid red;
-    // outline-offset: -5px;
+  padding: 28px 20px;
+  background-color: #ffffff;
+  color: #000000;
+
+  @media (min-width: $tablet-width) {
+    padding: 32px 34px;
+    display: flex;
+  }
+
+  // outline: 5px solid red;
+  // outline-offset: -5px;
 }
 
 .stats__slogan {
-    margin: 0;
+  margin: 0;
+  margin-bottom: 13px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 30px;
+  color: #000000;
 }
 
 .stats__intro {
-    margin: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  line-height: 27px;
+  color: #000000;
 }
 .stats__legend {
-    margin: 0;
+  margin: 0;
 }
 
 .stats__legend--top {
-    @media (max-width: $mobile-width) {
-        display: none;
-    }
+  @media (max-width: $mobile-width) {
+    display: none;
+  }
 }
 
 .stats__legend--bottom {
-    @media (min-width: $tablet-width) {
-        display: none;
-    }
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.stats__item {
+  height: 80px;
+  margin: 0;
+  padding: 20px 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.stats__number {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.stats__desription {
+  display: flex;
+  align-items: center;
+  text-align: right;
+}
+
+.stats__list div:nth-child(1) {
+  background: rgba(255, 255, 255, 0.05);
+}
+.stats__list div:nth-child(2) {
+  background: rgba(255, 255, 255, 0.12);
+}
+.stats__list div:nth-child(3) {
+  background: #353535;
+}
+.stats__list div:nth-child(4) {
+  background: rgba(255, 255, 255, 0.12);
 }
