--- a/src/assets/scss/variables/variables.scss
+++ b/src/assets/scss/variables/variables.scss
@@ -8,3 +8,10 @@ $lightgrey: #f8f5f2;
 $mobile-width: 767px;
 $tablet-width: 768px;
 $desktop-width: 1200px;
+
+// @font-face {
+//     font-family: "PT Sans Narrow";
+//     font-weight: normal;
+//     font-size: normal;
+//     font-display: swap;
+// }
